# sample-agentic-frameworks-on-aws

./: .gitignore  README.md
DeepResearch/mcp-server/: README.md  requirements.txt  strands-DeepResearch-mcp-server.py  strands-mcp-server.py
Writer_demo/: README.md  requirements.txt  streamlit_app.py  writer_agent.py  writer_agent_orig.py
a2a-protocol/: README.md
a2a-protocol/A2A-Protocol-Bedrock-Agents/: README.md
a2a-protocol/A2A-Protocol-Bedrock-Agents/samples/python/: README.md  pyproject.toml
a2a-protocol/A2A-Protocol-Bedrock-Agents/samples/python/agents/currencyconvertoragent/: README.md  __main__.py  agent.py
a2a-protocol/A2A-Protocol-Bedrock-Agents/samples/python/agents/websearchagent/: README.md  __main__.py  agent.py  pyproject.toml
a2a-protocol/A2A-Protocol-Bedrock-Agents/samples/python/common/: task_manager.py
a2a-protocol/A2A-Protocol-Bedrock-Agents/samples/python/common/utils/: push_notification_auth.py
a2a-protocol/A2A-Protocol-Bedrock-Agents/samples/python/hosts/bedrock/: README.md  __main__.py  agent.py  remote_agent_connection.py  task_manager.py  utility.py
a2a-protocol/A2A-Protocol-Bedrock-Agents/samples/python/hosts/cli/: README.md  run_from_local_client.py
a2a-protocol/a2a-advisory-trading/: .gitignore  Makefile  README.md  cli.py
arize-phoenix/: README.md
crewai/: README.md
crewai/aws-security-auditor-crew/: .env.example  .gitignore  README.md  pyproject.toml  report.md
crewai/aws-security-auditor-crew/src/aws_infrastructure_security_audit_and_reporting/: crew.py  main.py
crewai/aws-security-auditor-crew/src/aws_infrastructure_security_audit_and_reporting/config/: agents.yaml  tasks.yaml
crewai/aws-security-auditor-crew/src/aws_infrastructure_security_audit_and_reporting/tools/: aws_infrastructure_scanner_tool.py
eks/: CONTRIBUTING.md  README.md
eks/agents/a2a/agent/: Dockerfile  k8s.yaml  pyproject.toml
eks/agents/a2a/agent/src/: agent.py  agent_a2a_server.py
eks/agents/a2a/client/: agent_a2a_client.bash  agent_a2a_client.py  pyproject.toml
eks/agents/a2a/multi-agent/: Dockerfile  k8s.yaml  pyproject.toml
eks/agents/a2a/multi-agent/src/: travel_agent.py
eks/agents/a2a/multi-agent/src/challenge/: hotel_agent.py  hotels_agent.py
eks/agents/travel/: .dockerignore  Dockerfile  README.md  a2a-remote.yaml  a2a_agents.json  agent.md  pyproject.toml
eks/agents/travel/src/: __init__.py  agent.py  agent_server_fastapi.py  main.py
eks/agents/travel/tests/: __init__.py  test_e2e_fastapi.py  test_e2e_fastapi_curl.sh
eks/agents/weather/mcp-servers/weather-mcp-server/: Dockerfile  pyproject.toml
eks/scripts/: containers.sh  env.sh  infra.sh  kubernetes.sh  restart-kubernetes.sh  run.sh  terraform-prep-env-travel-agent.sh  terraform-prep-env-weather-agent.sh  terraform-prep-env-weather-ui.sh  ui.sh  uninstall-kubernetes.sh  weather-mcp.sh  workshop.bash
eks/terraform/: .gitignore  cognito.tf  dynamodb.tf  ecr.tf  outputs.tf  podidentity.tf  prep-env-weather-agent.sh  prep-env-weather-ui.sh  prep-env-weather-web.sh  redis.tf  s3.tf  variables.tf  versions.tf
eks/ui/: .dockerignore  Dockerfile  app.py  oauth.py
eks/weather/: .gitignore  AmazonQ.md  Dockerfile  QUICKSTART.md  README.md  agent.md  cloudbot.md  mcp.json  pyproject.toml
eks/weather/.amazonq/: mcp.json
eks/weather/.amazonq/rules/: readme.md
eks/weather/docs/: MCP_CONFIG.md
eks/weather/helm/: agent-cloudbot.yaml  mcp-null.yaml  mcp-remote.yaml  values.yaml
eks/weather/helm/templates/: NOTES.txt  configmap-agent.yaml  deployment.yaml  ingress-a2a.yaml  ingress-mcp.yaml  ingress.yaml  ingressclass.yaml  ingressclassparams.yaml  service.yaml
eks/weather/helm/templates/tests/: test-connection.yaml
eks/weather/mcp-servers/weather-mcp-server/: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py
eks/weather/mcp-servers/weather-mcp-server/.amazonq/: mcp.json
eks/weather/mcp-servers/weather-mcp-server/helm/: Chart.yaml  values.yaml
eks/weather/mcp-servers/weather-mcp-server/helm/templates/: ingress-mcp.yaml  serviceaccount.yaml
eks/weather/scripts/: containers.sh  env.sh  infra.sh  kubernetes.sh  restart-kubernetes.sh  run.sh  ui.sh  uninstall-kubernetes.sh
eks/weather/src/: agent.py  agent_server_a2a.py  agent_server_fastapi.py  agent_server_mcp.py  main.py
eks/weather/tests/: test_e2e_a2a.py  test_e2e_fastapi.py
eks/weather/web/: Dockerfile  app.py  oauth.py  pyproject.toml
eks/weather/web/helm/: values.yaml
eks/weather/web/helm/templates/: ingress-fastapi.yaml
eks/weather/web/helm/templates/tests/: test-connection.yaml
galileo/: README.md
langchain/: Mistral-AWS-ecosystem-LLM-router.ipynb  README.md  neuron_agents_llm.ipynb
langchain/customer_support/: README.md
langchain/cybersecurity-ai-platform/: CONTRIBUTING.md  requirements.txt  requirements_minimal.txt
langchain/deep-research/: .env.example  README.md  langgraph.json  pyproject.toml
langchain/deep-research/src/agent/: configuration.py  graph.py  prompts.py  utils.py
langchain/financial-agent/: README.md  constants.ts  package-lock.json  package.json
langchain/memory-patterns/: langgraph-memory-patterns.ipynb
langchain/network-security-agent/: CHANGELOG.md  INSTALLATION.md  LICENSE
langchain/shopping-agent/: .env.example  README.md  docker-compose.yml  langgraph.json  pyproject.toml
langchain/waf-logs-in-clickhouse/: s3_to_clickhouse.py
langgraph/: Multi_Agent_LangGraph_Mistral.ipynb  README.md
llamaindex/: README.md  ReAct_Agent_LlamaIndex.py
mcp-protocol/: README.md  opensearch_mcp_server.ipynb
mcp-protocol/probe42-mcp/: LICENSE  README.md  pyproject.toml
mcp-protocol/probe42-mcp/src/probe_mcp_server/: __init__.py  client.py  server.py
mcp-protocol/probe42-mcp/src/probe_mcp_server/tools/: base.py  kyc.py  search.py
mem0/: README.md
pipecat/: README.md
strands-agents/: README.md
strands-agents/probe42-strands-agent/: README.md  pyproject.toml  run_streamlit.py
strands-agents/probe42-strands-agent/src/probe_agent/: __init__.py  agent.py  streamlit_app.py  tools.py
tensorfuse/: Readme.md
(+374 files in other folders)
