[project]
name = "aws_deep_research"
version = "0.0.16"
description = "Planning, research, and report generation."
authors = [
    { name = "Robert Xu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.1",
    "langchain-anthropic>=1.0.0",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-tavily",
    "langchain-groq>=1.0.0",
    "openai>=2.6.1",
    "tavily-python>=0.7.12",
    "arxiv>=2.1.3",
    "pymupdf>=1.25.3",
    "xmltodict>=0.14.2",
    "linkup-sdk>=0.2.3",
    "duckduckgo-search>=3.0.0",
    "exa-py>=1.8.8",
    "requests>=2.32.3",
    "beautifulsoup4==4.13.3",
    "python-dotenv>=1.0.1",
    "pytest",
    "httpx>=0.24.0",
    "markdownify>=0.11.6",
    "azure-identity>=1.21.0",
    "azure-search>=1.0.0b2",
    "azure-search-documents>=11.5.2",
    "rich>=13.0.0",
    "langgraph-cli[inmem]>=0.4.4",
    "langsmith>=0.4.38",
    "langchain-google-vertexai>=3.0.0",
    "langchain-google-genai>=3.0.0",
    "ipykernel>=6.29.5",
    "supabase>=2.15.3",
    "mcp>=1.19.0",
    "langchain-aws>=1.0.0",
    "pandas>=2.3.1",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]

[tool.setuptools.package-dir]
"agent" = "src/agent"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]


[tool.ruff.lint.pydocstyle]
convention = "google"
