[project]
name = "travel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.14",
    "boto3>=1.39.9",
    "strands-agents-tools[a2a-client]>=0.2.2",
    "strands-agents[a2a]>=1.1.0"
]

[project.scripts]
"fastapi-server"   = "src.main:main_fastapi"
"interactive"      = "src.main:main_interactive"
"agent"            = "src.main:servers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

