[project]
name = "web-ui"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gradio==5.33.2",
    "boto3==1.38.36",
    "fastapi==0.115.12",
    "itsdangerous==2.2.0",
    "uvicorn==0.34.3",
    "authlib==1.6.0",
    "python-dotenv==1.0.1"
]

[project.scripts]
"web" = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
