[project]
name = "my-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"

dependencies = [
    "strands-agents[a2a]==1.15.0",
    "strands-agents-tools==0.2.14",
    "mcp[cli]==1.20.0"
]

[project.scripts]
"agent"            = "src.agent:main"
"agent-a2a-server" = "src.agent_a2a_server:run_a2a_server"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
