[project]
name = "a2a-client"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"

dependencies = [
    "a2a-sdk>=0.3.10"
]

[project.scripts]
"a2a-client"            = "agent_a2a_client:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
